--- a/class.html
+++ b/class.html
@@ -33,7 +33,7 @@
         电子邮箱: 2796693830@qq.com<br>
     </footer>
     <script>
-        const people = ["周雅岚", "林铭辉", "林宇扬", "王睿成"];
+        const people = ["周雅岚", "林铭辉", "林宇扬", "王睿丞"];
 
         const classList = document.getElementById('classList');
         people.forEach((name, index) => {
